tests/parser/fail/super-class-param-bin.som
"test:
failMessage:
  - contains: define
  - contains: super
"

SuperClassParamBin = (
  ----

  / super = ('rip')
)
